updated user file

--- a/public/Testing.html
+++ b/public/Testing.html
@@ -13,7 +13,7 @@
 
   <script src="resources/qunit-1.12.0.js"></script>
   <!--<script src="Game working copy.js"></script>-->
-  <script src="Testing.js"></script>
+  <script src="UserTests.js"></script>
   
   
 </body>
