fixed testing files and spec's

--- a/public/Testing.html
+++ b/public/Testing.html
@@ -14,6 +14,7 @@
   <script src="resources/qunit-1.12.0.js"></script>
   <!--<script src="Game working copy.js"></script>-->
   <script src="UserTests.js"></script>
+  <script src="workoutTests.js"></script>
   
   
 </body>
